--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -4,4 +4,12 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "fastapi>=0.115.12",
+    "socket-pro",
+    "uvicorn>=0.34.2",
+    "websockets>=15.0.1",
+]
+
+[tool.uv.sources]
+socket-pro = { path = "socket_pro-0.1.0-py3-none-any.whl" }
